force-app/main/default/objects/User/fields/BASPersonneID__c.field-meta.xml
<CustomField>
    <fullName>BASPersonneID__c</fullName>
    <description>For lead export FR</description>
    <label>BASPersonneID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>