force-app/main/default/objects/User/fields/BID_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>BID_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for BID team reports and dashboards</description>
    <inlineHelpText>Check this box if user is member of BID team</inlineHelpText>
    <label>BID Team Member</label>
    <type>Checkbox</type>
</CustomField>