force-app/main/default/objects/User/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>APPS</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Value Services</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>Eggs Part of Sopra Steria</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>