force-app/main/default/objects/User/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Special usage / conditions etc</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>