force-app/main/default/objects/User/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>HYPERLINK(&quot;lightning/r/Report/00O4I000004cJL9UAM/view?queryScope=UserFolders&amp;fv0=&quot; +
FirstName + &quot; &quot; + LastName, &quot;Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>