force-app/main/default/objects/User/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>For bid-portal</description>
    <inlineHelpText>Correct email address from AD (firstname.lastname@soprasteria.com) The field is needed for the BID portal integration.</inlineHelpText>
    <label>Email2</label>
    <type>Email</type>
</CustomField>