force-app/main/default/objects/User/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <label>Email3</label>
    <length>128</length>
    <type>Text</type>
</CustomField>