force-app/main/default/objects/User/fields/High_Importance_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>High_Importance_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow updates High importance permission set membership based on this setting. 
The field is needed for report that show user with or wihout High importance opportunities</description>
    <inlineHelpText>Enable edit access to the &quot;High Importance&quot; flag in opportunity</inlineHelpText>
    <label>High Importance Opportunities</label>
    <type>Checkbox</type>
</CustomField>