force-app/main/default/objects/User/fields/Include_Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Include_Closed_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Closed Opportunities</label>
    <type>Checkbox</type>
</CustomField>