force-app/main/default/objects/User/fields/Login_count__c.field-meta.xml
<CustomField>
    <fullName>Login_count__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>