force-app/main/default/objects/User/fields/Lookup_BASPersonne__c.field-meta.xml
<CustomField>
    <fullName>Lookup_BASPersonne__c</fullName>
    <formula>&quot;https://steria.sharepoint.com/sites/intra_root/sitepages/search-people.aspx#Default=%7B%22k%22%3A%22&quot; &amp; SUBSTITUTE(FirstName &amp; &quot; &quot; &amp; LastName, &quot; &quot;, &quot;%20&quot;) &amp; &quot;%22%2C%22r%22%3A%5B%5D%7D&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Find Person in Face2Face</label>
    <type>Text</type>
</CustomField>