force-app/main/default/objects/User/fields/Notify_for_new_Leads__c.field-meta.xml
<CustomField>
    <fullName>Notify_for_new_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify for new Leads</label>
    <type>Checkbox</type>
</CustomField>