force-app/main/default/objects/User/fields/Opportunity_Overview_Config__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Overview_Config__c</fullName>
    <defaultValue>&apos;{&quot;columns&quot;:[{&quot;name&quot;:&quot;name&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;sector&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;vertical&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;accountName&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;stageName&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;bu&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;amount&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{},{}]},{&quot;name&quot;:&quot;amountThisYear&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{},{}]},{&quot;name&quot;:&quot;expectedRevenue&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{},{}]},{&quot;name&quot;:&quot;closeDate&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{&quot;priority&quot;:0,&quot;direction&quot;:&quot;asc&quot;},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;proposalDueDate&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;owner&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;accountOwner&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;country&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;type&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;description&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;probability&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;expectedStartDate&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;months&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;appsOwner&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;appsStatus&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{&quot;listTerm&quot;:[],&quot;term&quot;:&quot;&quot;}]},{&quot;name&quot;:&quot;age&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;bcOwner&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;bcStatus&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;imcsOwner&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;imcsStatus&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;lastActivity&quot;,&quot;visible&quot;:true,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;bidofficeOwner&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;ownerscountry&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;classification&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]},{&quot;name&quot;:&quot;domain&quot;,&quot;visible&quot;:false,&quot;width&quot;:&quot;*&quot;,&quot;sort&quot;:{},&quot;filters&quot;:[{}]}],&quot;scrollFocus&quot;:{&quot;focus&quot;:false},&quot;selection&quot;:[],&quot;grouping&quot;:{},&quot;treeView&quot;:{},&quot;pagination&quot;:{}}&apos;</defaultValue>
    <label>Opportunity Overview Config</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>