force-app/main/default/objects/User/fields/Replace_Ownerships__c.field-meta.xml
<CustomField>
    <fullName>Replace_Ownerships__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to start replacement of owner&apos;s fields in opportunity and account</inlineHelpText>
    <label>Replace BU Ownerships</label>
    <type>Checkbox</type>
</CustomField>