force-app/main/default/objects/User/validationRules/User_data.validationRule-meta.xml
<ValidationRule>
    <fullName>User_data</fullName>
    <active>true</active>
    <errorConditionFormula>!(Country =  &quot;Norway&quot; || Country = &quot;Denmark&quot; || Country = &quot;Sweden&quot; || Country = &quot;Temp&quot;)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country must be &apos;Norway&apos;, &apos;Denmark&apos; or &apos;Sweden&apos;.</errorMessage>
</ValidationRule>