force-app/main/default/objects/User/listViews/Active_Users_DK.listView-meta.xml
<ListView>
    <fullName>Active_Users_DK</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Business_Unit__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ADDRESS_COUNTRY</field>
        <operation>equals</operation>
        <value>Denmark</value>
    </filters>
    <label>Active Users DK</label>
</ListView>