force-app/main/default/objects/User/listViews/Active_Users_SE.listView-meta.xml
<ListView>
    <fullName>Active_Users_SE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Currency__c</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ADDRESS_COUNTRY</field>
        <operation>equals</operation>
        <value>Sweden</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users SE</label>
</ListView>