force-app/main/default/objects/User/listViews/BID_Team.listView-meta.xml
<ListView>
    <fullName>BID_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BID_Team_Member__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BID Team</label>
</ListView>