force-app/main/default/objects/User/listViews/DPS_NO.listView-meta.xml
<ListView>
    <fullName>DPS_NO</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ADDRESS_COUNTRY</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>DPS</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DPS NO</label>
</ListView>