force-app/main/default/objects/User/listViews/Frozen.listView-meta.xml
<ListView>
    <fullName>Frozen</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Business_Unit__c</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Frozen</label>
</ListView>