force-app/main/default/objects/User/listViews/NO_BAS_personne_id.listView-meta.xml
<ListView>
    <fullName>NO_BAS_personne_id</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BASPersonneID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Limited access user</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>integrationuser</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>Support</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>00d58000000xlxveas</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>eggsdesign</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>00d58000000xlxveas.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>User</value>
    </filters>
    <label>NO BAS personne id</label>
</ListView>