force-app/main/default/objects/User/listViews/No_country.listView-meta.xml
<ListView>
    <fullName>No_country</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ADDRESS_COUNTRY</field>
        <operation>equals</operation>
    </filters>
    <label>No country</label>
</ListView>